--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
 
-    <script src="build/build.js"></script>
+    <script src="build/sketch.js"></script>
 
     <link rel="shortcut icon" href="https://p5js.org/assets/img/favicon.ico">
     <link rel="icon" href="https://p5js.org/assets/img/favicon.ico">
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
     <style>
         * {
